--- a/importantstuff.html
+++ b/importantstuff.html
@@ -104,7 +104,7 @@
       <br />
       <h4><strong>Things you need to know when renting in London</strong></h4>
       <br />
-      <h4>Navigating renting in London can be pretty overwhelming. <br /> <br />So here are some pointers about where to start. <br /> <br />Hover over the boxes to get some tips!</h4>
+      <h4>Navigating renting in London can be pretty overwhelming. <br /> <br />Here are some pointers about where to start.</h4><br  />
     </div>
   </div>
   <div class="col-sm-3"> </div>
@@ -117,13 +117,16 @@
     <div class="col-md-12">
       <div class="container2">
         <img src="assets/images/Important_2.jpg" alt="Avatar" class="Important_2">
+        <h5>Types of rental properties</h5>
           <div class="overlay2">
             <div class="text">
-            <h4>There are lots of different rental options.</h4><br />
+            <br />
+            <br />
+            <br />
             <ul>
-              <li><strong>Short term or long term?</strong> Lets less than 12 months are usually called short term lets. If you're looking for a short term let, make sure you don't waste your time looking at places that are only available for longer.</li><br />
-              <li><strong>Whole place or flatshare?</strong> You could rent a whole place and divide the rent with some friends or do a flatshare. A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers.</li><br />
-              <li><strong>Furnished or unfurnished?</strong> You might save money by renting an unfurnished place, but if you have to buy furniture it might cost more!</li><br />
+              <li><strong>Short term or long term?</strong> If you're looking for a short term let, don't waste your time looking at places that are only available for longer.</li><br />
+              <li><strong>Whole place or flatshare?</strong> A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers. Or you could rent a whole place with some friends.</li><br />
+              <li><strong>Furnished or unfurnished?</strong> Unfurnished places might be cheaper but buying furniture may make it cost more overall.</li><br />
               <li><strong>Through a letting agent or directly with the landlord?</strong> You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
             </ul>
             </div>
@@ -134,58 +137,43 @@
 
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+
 
 <div class="row">
   <div class="col-md-6">
-    <div class="container2">
-      <img src="assets/images/Important_1.jpg" alt="Avatar" class="image">
+    <div class="container3">
+      <img src="assets/images/Important_3.jpg" alt="Avatar" class="image">
+      <h5>Where to start looking</h5>
           <div class="overlay2">
             <div class="text">
-            <br />
-            <h4><strong>Where to look for a place</strong></h4>
-            <br />
-            <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
             <ul>
-              <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look for spare rooms across London. It's free to use, but some for features you need to be a subscriber. This is a good place to look if you are looking for short-term lets. As with all free sites, make sure you view the place before you hand over any money.</li><br />
+              <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look. You can search for short term, agent-only or use flatmate finder!</li><br />
               <li><bold><a href="https://www.openrent.co.uk/">OpenRent</a></bold> links landlords and tenants directly which reduces fees!</li><br />
-              <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> is another way to find places with lower rent and lower fees.</li><br />
-              <li><bold><a href="http://www.rightmove.co.uk/">RightMove</a></bold> is also a great site for longer term rentals, although the listings tend to be from agents who may charge high fees.</li><br />
-              <li><bold><a href="https://www.primelocation.com/to-rent/">PrimeMove</a></bold> is similar to RightMove, it has lots of longer term listings by agents across London.</li><br />
-              <li>You might also like to try <bold><a href="https://www.gumtree.com/property-to-rent/london">Gumtree</a></bold> or websites (or shop windows) of letting agents. Hover over the <strong>Letting Agents</strong> box for a few pointers!</li>
+              <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> to find places with lower rent and lower fees.</li><br />
+              <li><bold><a href="http://www.rightmove.co.uk/">RightMove</a></bold> is great for longer term rentals. Listings are from agents who may charge high fees.</li><br />
+              <li><bold><a href="https://www.primelocation.com/to-rent/">PrimeMove</a></bold> is similar to RightMove.</li><br />
+              <li>Also try <bold><a href="https://www.gumtree.com/property-to-rent/london">Gumtree</a></bold> or websites (and shop windows) of letting agents. Hover over the <strong>Letting Agents</strong> box for a few pointers!</li>
             </ul>
             </div>
           </div>
         </div>
     </div>
-  </div>
 
   
   <div class="col-md-6">
-
-  </div>
-
-    <div class="col-md-6">
-
-    <div class="textcontainer">
+    <div class="container4">
+      <img src="assets/images/Important_4.jpg" alt="Avatar" class="image">
+      <h5>Letting Agents</h5>
+      <div class="overlay2">
+      <div class="text">
       <br />
-      <h4><strong>Letting Agents</strong></h4>
-      <br />
-      <h4>There are millions of letting agents in London. Some are better than others, so how do you know who to use? <br /> <br />Here are some things to think about:</h4><br />
       <ul>
-        <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and they might be able to show you multiple properties at more convenient times.</li>
+        <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and set up multiple views at convenient times.</li>
         <br />
         <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold> but are more like to have smooth procedures </li><br />
-        <li>Remember to always ask about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
+        <li>Remember to always ask about <strong>all</strong> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li><br />
+        <li>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</li>
       </ul><br />
-      <h4>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</h4>
     </div>
 
   </div>
@@ -194,6 +182,7 @@
 </div>
 
 </div>
+
 
 <br />
 <br />
