Updated important with new hover

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -165,61 +165,52 @@
       <img src="assets/images/Important_4.jpg" alt="Avatar" class="image">
       <h5>Letting Agents</h5>
       <div class="overlay2">
-      <div class="text">
-      <br />
-      <ul>
-        <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and set up multiple views at convenient times.</li>
-        <br />
-        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold> but are more like to have smooth procedures </li><br />
-        <li>Remember to always ask about <strong>all</strong> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li><br />
-        <li>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</li>
-      </ul><br />
+        <div class="text">
+          <br />
+          <ul>
+            <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and set up multiple views at convenient times.</li>
+            <br />
+            <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold> but are more like to have smooth procedures </li><br />
+            <li>Remember to always ask about <strong>all</strong> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li><br />
+            <li>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</li>
+          </ul><br />
+        </div>
+      </div>
     </div>
-
   </div>
-
- </div>
 </div>
-
-</div>
-
 
 <br />
 <br />
 
-<div class="container">
 <div class="row">
-    <div class="col-md-6">
-    <div class="textcontainer">
-      <br />
-      <h4><strong>Things to ask when you view a place</strong></h4>
-      <br />
-      <h4>Make sure you make the most of your viewings by asking these things:</h4><br />
-      <ul>
-        <li>The amount of rent (weekly or monthly)</li><br  />
-        <li>The amount of deposit</li><br  />
-        <li><strong>All</strong> fees associated with the property</li><br />
-        <li>Council tax</li><br />
-        <li>Approximate cost of bills per month</li><br  />
-        <li>Are any bills included in the rent?</li><br  />
-        <li>How to make an application</li><br  />
-        <li>Why are the previous tenants moving?</li><br  />
-        <li>What date is it available?</li><br  />
-        <li>How long is the tenancy?</li><br  />
-        <li>What are the other tenants like?</li><br  />
-        <li>Where's the nearest tube station/bus stop?</li><br  />
-        <li>Where's the nearest supermarket?</li><br  />
-      </ul><br />
-
+  <div class="col-md-6">
+    <div class="container5">
+      <img src="assets/images/Important_5.jpg" alt="Avatar" class="image">
+      <h5>Things to ask at viewings</h5>
+      <div class="overlay2">
+        <div class="text">
+          <ul>
+            <li>The amount of rent (weekly or monthly)</li><br  />
+            <li>The amount of deposit</li><br  />
+            <li><strong>All</strong> fees associated with the property</li><br />
+            <li>Council tax</li><br />
+            <li>Approximate cost of bills per month</li><br  />
+            <li>Are any bills included in the rent?</li><br  />
+            <li>How to make an application</li><br  />
+            <li>Why are the previous tenants moving?</li><br  />
+            <li>What date is it available?</li><br  />
+            <li>How long is the tenancy?</li><br  />
+            <li>What are the other tenants like?</li><br  />
+            <li>Where's the nearest tube station/bus stop?</li><br  />
+            <li>Where's the nearest supermarket?</li><br  />
+          </ul><br />
+        </div>
+      </div>
     </div>
-  </div>
+  </div> 
 
   <div class="col-md-6">
-
-      </div>
-
-    <div class="col-md-6">
-
     <div class="textcontainer">
       <br />
       <h4><strong>Things to check when you view a place</strong></h4>
