Updated important stuff page images

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -211,27 +211,28 @@
   </div> 
 
   <div class="col-md-6">
-    <div class="textcontainer">
-      <br />
-      <h4><strong>Things to check when you view a place</strong></h4>
-      <br />
-      <h4>Make sure you make the most of your viewings by checking these things:</h4><br />
-      <ul>
-        <li>Do the windows close properly?</li><br  />
-        <li>Is there enough storage?</li><br />
-        <li>Is there any damp/mould?</li><br />
-        <li>How noisy is it? Look for bars, trains and busy roads close by.</li><br  />
-        <li>Is the area safe and is the place secure?</li><br  />
-        <li>Do the appliances work?</li><br  />
-        <li>Does it come furnished?</li><br  />
-        <li>Is it very cold or warm?</li><br  />
-        <li>Water pressure</li><br  />
-        <li>Are there any signs of vermin?</li><br  />
-      </ul><br />
-
+    <div class="container6">
+      <img src="assets/images/Important_6.jpg" alt="Avatar" class="image">
+      <h5>What to check at viewings</h5>
+      <div class="overlay2">
+        <div class="text">
+          <ul>
+            <li>Do the windows close properly?</li><br  />
+            <li>Is there enough storage?</li><br />
+            <li>Is there any damp/mould?</li><br />
+            <li>How noisy is it? Watch for bars, trains and busy roads.</li><br  />
+            <li>Is the area safe and is the place secure?</li><br  />
+            <li>Do the appliances work?</li><br  />
+            <li>Does it come furnished?</li><br  />
+            <li>Is it too cold or hot?</li><br  />
+            <li>Water pressure</li><br  />
+            <li>Are there any signs of vermin?</li><br  />
+          </ul><br />
+        </div>
+      </div>
     </div>
   </div>
-
+</div>
 
 </div>
 </div>
