Updated images on important stuff

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -120,9 +120,6 @@
         <h5>Types of rental properties</h5>
           <div class="overlay2">
             <div class="text">
-            <br />
-            <br />
-            <br />
             <ul>
               <li><strong>Short term or long term?</strong> If you're looking for a short term let, don't waste your time looking at places that are only available for longer.</li><br />
               <li><strong>Whole place or flatshare?</strong> A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers. Or you could rent a whole place with some friends.</li><br />
@@ -234,32 +231,26 @@
   </div>
 </div>
 
-</div>
-</div>
-</div>
-
-
 <br />
 <br />
-<br />
-
 
 <div class="row">
-  <div class="col-sm-3"> </div>
-    <div class="col-md-6">
-<div class="textcontainer">
-      <br />
-      <h4><strong>Your rights when renting</strong></h4>
-      <br />
-      <h4>Make sure you know your rights when renting a place by checking out these sites:</h4>
-      <ul>
-        <li><bold><a href="https://www.rentersrightslondon.org/your-rights/">Renters' Rights London</a></bold></li><br />
-        <li><bold><a href="http://debut.careers/insight/renting-rights-london-tenant/">Debut</a></bold></li><br />
-        <li><bold><a href="https://www.citizensadvice.org.uk/housing/renting-a-home/renting-from-a-private-landlord">Citizens Advice</a></bold></li>
-      </ul>
-    </div>
+  <div class="col-md-12">
+    <div class="container7">
+      <img src="assets/images/Important_7.jpg" alt="Avatar" class="image">
+      <h5>Your rights when renting</h5>
+      <div class="overlay2">
+        <div class="text">
+        <h3>Make sure you know your rights when renting a place by checking out these sites:</h3>
+         <ul>
+            <li><bold><a href="https://www.rentersrightslondon.org/your-rights/">Renters' Rights London</a></bold></li><br />
+           <li><bold><a href="http://debut.careers/insight/renting-rights-london-tenant/">Debut</a></bold></li><br />
+           <li><bold><a href="https://www.citizensadvice.org.uk/housing/renting-a-home/renting-from-a-private-landlord">Citizens Advice</a></bold></li>
+          </ul>
+        </div>
+      </div>
+     </div>
   </div>
-  <div class="col-sm-3"> </div>
 </div>
 
 <br />
