--- a/importantstuff.html
+++ b/importantstuff.html
@@ -113,13 +113,14 @@
 <br />
 
 
-<div class="row">
+<div class="row paddedrow">
     <div class="col-md-12">
       <div class="container2">
         <img src="assets/images/Important_2.jpg" alt="Avatar" class="Important_2">
         <h5>Types of rental properties</h5>
           <div class="overlay2">
             <div class="text">
+              <br /> <br />
             <ul>
               <li><strong>Short term or long term?</strong> If you're looking for a short term let, don't waste your time looking at places that are only available for longer.</li><br />
               <li><strong>Whole place or flatshare?</strong> A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers. Or you could rent a whole place with some friends.</li><br />
@@ -136,7 +137,7 @@
 <br />
 
 
-<div class="row">
+<div class="row paddedrow">
   <div class="col-md-6">
     <div class="container3">
       <img src="assets/images/Important_3.jpg" alt="Avatar" class="image">
@@ -144,6 +145,7 @@
           <div class="overlay2">
             <div class="text">
             <ul>
+              <br /> <br />
               <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look. You can search for short term, agent-only or use flatmate finder!</li><br />
               <li><bold><a href="https://www.openrent.co.uk/">OpenRent</a></bold> links landlords and tenants directly which reduces fees!</li><br />
               <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> to find places with lower rent and lower fees.</li><br />
@@ -165,6 +167,7 @@
         <div class="text">
           <br />
           <ul>
+               <br /> 
             <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and set up multiple views at convenient times.</li>
             <br />
             <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold> but are more like to have smooth procedures </li><br />
@@ -180,7 +183,7 @@
 <br />
 <br />
 
-<div class="row">
+<div class="row paddedrow">
   <div class="col-md-6">
     <div class="container5">
       <img src="assets/images/Important_5.jpg" alt="Avatar" class="image">
@@ -188,6 +191,7 @@
       <div class="overlay2">
         <div class="text">
           <ul>
+               <br /> <br />
             <li>The amount of rent (weekly or monthly)</li><br  />
             <li>The amount of deposit</li><br  />
             <li><strong>All</strong> fees associated with the property</li><br />
@@ -214,6 +218,7 @@
       <div class="overlay2">
         <div class="text">
           <ul>
+               <br /> <br />
             <li>Do the windows close properly?</li><br  />
             <li>Is there enough storage?</li><br />
             <li>Is there any damp/mould?</li><br />
@@ -234,13 +239,14 @@
 <br />
 <br />
 
-<div class="row">
+<div class="row paddedrow">
   <div class="col-md-12">
     <div class="container7">
       <img src="assets/images/Important_7.jpg" alt="Avatar" class="image">
       <h5>Your rights when renting</h5>
       <div class="overlay2">
         <div class="text">
+             <br /> 
         <h3>Make sure you know your rights when renting a place by checking out these sites:</h3>
          <ul>
             <li><bold><a href="https://www.rentersrightslondon.org/your-rights/">Renters' Rights London</a></bold></li><br />
