--- a/importantstuff.html
+++ b/importantstuff.html
@@ -114,7 +114,7 @@
 
 
 <div class="row paddedrow">
-    <div class="col-md-12">
+    <div class="col-md-12 hideoverflow">
       <div class="container2">
         <img src="assets/images/Important_2.jpg" alt="Avatar" class="Important_2">
         <h5>Types of rental properties</h5>
@@ -138,7 +138,7 @@
 
 
 <div class="row paddedrow">
-  <div class="col-md-6">
+  <div class="col-md-6 hideoverflow">
     <div class="container3">
       <img src="assets/images/Important_3.jpg" alt="Avatar" class="image">
       <h5>Where to start looking</h5>
@@ -159,7 +159,7 @@
     </div>
 
   
-  <div class="col-md-6">
+  <div class="col-md-6 hideoverflow">
     <div class="container4">
       <img src="assets/images/Important_4.jpg" alt="Avatar" class="image">
       <h5>Letting Agents</h5>
@@ -184,7 +184,7 @@
 <br />
 
 <div class="row paddedrow">
-  <div class="col-md-6">
+  <div class="col-md-6 hideoverflow">
     <div class="container5">
       <img src="assets/images/Important_5.jpg" alt="Avatar" class="image">
       <h5>Things to ask at viewings</h5>
@@ -211,7 +211,7 @@
     </div>
   </div> 
 
-  <div class="col-md-6">
+  <div class="col-md-6 hideoverflow">
     <div class="container6">
       <img src="assets/images/Important_6.jpg" alt="Avatar" class="image">
       <h5>What to check at viewings</h5>
@@ -240,7 +240,7 @@
 <br />
 
 <div class="row paddedrow">
-  <div class="col-md-12">
+  <div class="col-md-12 hideoverflow">
     <div class="container7">
       <img src="assets/images/Important_7.jpg" alt="Avatar" class="image">
       <h5>Your rights when renting</h5>
