--- a/areaguide.html
+++ b/areaguide.html
@@ -61,21 +61,20 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/1500header1.jpg" alt="Living In London">
+      <img class= "image2" src="assets/images/1500header1.jpg" alt="Living In London">
     </div>
 
        <div class="item">
-      <img src="assets/images/1500header2.jpg" alt="Important Stuff">
+      <img class= "image2" src="assets/images/1500header2.jpg" alt="Living In London">
     </div>
 
 
     <div class="item">
-      <img src="assets/images/1500header3.jpg" alt="Important Stuff">
-    </div>
+      <img sclass= "image2" rc="assets/images/1500header3.jpg" alt="Living In London">
 
     <div class="item">
-      <img src="assets/images/1500header4.jpg" alt="Important Stuff">
-  </div>
+      <img class= "image2" src="assets/images/1500header4.jpg" alt="Living In London">
+    </div>
 
 
 
