--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="col-md-8">
 <div class="textcontainer">
       <br />
-      <h3> Click on <strong><a href="areaguide.html">Area Guide</a></strong> to find out more about places to live in London, click on <strong><a href="importantsuff.html">Important Stuff</a></strong> to find out more about the important things to know about moving to London and click on  <strong><a href="contactus.html">Contact Us</a></strong> to let us know if you have any hints or tips that you would like to share! </h3> 
+      <h3> Click on <strong><a href="areaguide.html">Area Guide</a></strong> to find out more about places to live in London <br  /> <br  /> Click on <strong><a href="importantsuff.html">Important Stuff</a></strong> to find out more about the important things to know about moving to London <br  /><br  /> Click on  <strong><a href="contactus.html">Contact Us</a></strong> to let us know if you have any hints or tips that you would like to share! </h3> 
       <br />
     </div>
   </div>
@@ -117,19 +117,12 @@
 </div>
 
 
-
-
-
-
 <div class="container">
-    <div class="row">
-        <div class="col-sm-6">
-
-
-<h3>Where Is London?</h3>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69333183026!2d-0.38178486230672587!3d51.52830796500685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2suk!4v1509918618041" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <h3>Where Is London?</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69333183026!2d-0.38178486230672587!3d51.52830796500685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2suk!4v1509918618041" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
 <br />
           <div class="col-sm-6">
