--- a/importantstuff.html
+++ b/importantstuff.html
@@ -62,20 +62,21 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img class= "image2" src="assets/images/1500header1.jpg" alt="Living In London">
+      <img src="assets/images/1500header1.jpg" alt="Living In London">
     </div>
 
        <div class="item">
-      <img class= "image2" src="assets/images/1500header2.jpg" alt="Living In London">
+      <img src="assets/images/1500header2.jpg" alt="Important Stuff">
     </div>
 
 
     <div class="item">
-      <img sclass= "image2" rc="assets/images/1500header3.jpg" alt="Living In London">
+      <img src="assets/images/1500header3.jpg" alt="Important Stuff">
+    </div>
 
     <div class="item">
-      <img class= "image2" src="assets/images/1500header4.jpg" alt="Living In London">
-    </div>
+      <img src="assets/images/1500header4.jpg" alt="Important Stuff">
+  </div>
 
 
   <!-- Left and right controls -->
