--- a/contactus.html
+++ b/contactus.html
@@ -34,8 +34,8 @@
             </div>
             <div class="col-sm-4 top-buffer">
               <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff</h2>        
+                <a href="rentalguide.html">
+                  <h2> Rental Guide</h2>        
                 </a>
               </div>
             </div>
