--- a/rentalguide.html
+++ b/rentalguide.html
@@ -19,7 +19,7 @@
 <header>
 <div class="container">
 <div class="overlay"> 
-        <h1> The Important Stuff </h1>
+        <h1> Rental Guide </h1>
         <h2>The overall guide for moving to London</h2>         
         <br />
         <br />
