--- a/areaguide.html
+++ b/areaguide.html
@@ -96,9 +96,7 @@
 <div class="row">
   <div class="col-sm-3"> </div>
     <div class="col-md-6">
-<div class="textcontainer">
-      <br />
-      <h4> <strong>Not sure where to start?</strong> Try these handy sites:</h4><br />
+<div class="textcontainer">      <h4> <strong>Not sure where to start?</strong> Try these handy sites:</h4><br />
       <h4>
         <strong> <a href="http://property.mapumental.com/">Mapumental </a> </strong> allows you to track your commute time from your work, school or favourite bar! <br /><br />
         <strong> <a href="https://www.allinlondon.co.uk/boroughs/">All In London </a> </strong> gives you an overview of every London Borough 
@@ -237,7 +235,7 @@
 </div>
 
 
-Insert Google Maps API Stuff
+
 
 <br />
 <br />
