--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="col-md-8">
 <div class="textcontainer">
       <br />
-      <h3> Click on <strong><a href="areaguide.html">Area Guide</a></strong> to find out more about places to live in London <br  /> <br  /> Click on <strong><a href="importantsuff.html">Important Stuff</a></strong> to find out more about the important things to know about moving to London <br  /><br  /> Click on  <strong><a href="contactus.html">Contact Us</a></strong> to let us know if you have any hints or tips that you would like to share! </h3> 
+      <h3> Click on <strong><a href="areaguide.html">Area Guide</a></strong> to find out more about places to live in London <br  /> <br  /> Click on <strong><a href="rentalguide.html">Rental Guide</a></strong> to find out more about the important things to know about moving to London <br  /><br  /> Click on  <strong><a href="contactus.html">Contact Us</a></strong> to let us know if you have any hints or tips that you would like to share! </h3> 
       <br />
     </div>
   </div>
