Changed area guide sizes

--- a/areaguide.html
+++ b/areaguide.html
@@ -151,12 +151,14 @@
 
 <br  />
 <br  />
+<br  />
+<br  />
 
 <div class="row">
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/West_no_border.jpg.png" alt="Avatar" class="image">
+      <img src="assets/images/West_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay2">
         <div class="text">
           <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
@@ -207,6 +209,9 @@
 </div>
 <br />
 <br />
+<br  />
+<br  />
+
 
 <div class="row">
 
@@ -220,7 +225,6 @@
           <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
           <h3>Some places to live in South London are:</h3>
           <ul>
-
             <li> <strong>Battersea</strong> if you love the outdoors and nature </li>
             <li> <strong>Peckham</strong> cosmopolitan, young and trendy </li>
             <li> <strong>Brixton</strong> trendy with great nightlife </li>
